--- a/microservice-gateway/pom.xml
+++ b/microservice-gateway/pom.xml
@@ -57,6 +57,11 @@
 
 
 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-oauth2-jose</artifactId>
+		</dependency>
+
 		<!-- Tests -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
